Trying to get somewhere with AuthServiceTest.